# internal/actions/controllers/biz.go
@@ -170,15 +170,18 @@ func (bc *BizController) GetVideoList(c *gin.Context) {
 				videoItem.Title = video["title"].(string)
 
 				statistics := video["statistics"].(map[string]interface{})
-				videoItem.DiggCount = statistics["digg_count"].(float64)
-				videoItem.DownloadCount = statistics["download_count"].(float64)
-				videoItem.ShareCount = statistics["share_count"].(float64)
-				videoItem.ForwardCount = statistics["forward_count"].(float64)
-				videoItem.PlayCount = statistics["play_count"].(float64)
+				videoItem.DiggCount = int64(statistics["digg_count"].(float64))
+				videoItem.DownloadCount = int64(statistics["download_count"].(float64))
+				videoItem.ShareCount = int64(statistics["share_count"].(float64))
+				videoItem.ForwardCount = int64(statistics["forward_count"].(float64))
+				videoItem.PlayCount = int64(statistics["play_count"].(float64))
 
 				getVideoListResponse.Videos = append(getVideoListResponse.Videos, videoItem)
 			}
+			debugInfo, _ := json.Marshal(getVideoListResponse)
+			logger.Infof("status ok, response=%+v", debugInfo)
 			c.JSON(http.StatusOK, getVideoListResponse)
+			return
 		} else {
 			getTokenError := &models.DouYinError{}
 			getTokenError.ErrorCode = errorCode
