# internal/actions/models/biz.go
@@ -18,22 +18,22 @@ type GetUserInfoResponse struct {
 }
 
 type GetVideoListResponse struct {
-	Videos []*VideoItem
+	Videos []*VideoItem `json:"videos"`
 }
 
 type VideoItem struct {
 	// 视频标题
 	Title string `json:"title"`
 	// 点赞数
-	DiggCount float64 `json:"diggCount"`
+	DiggCount int64 `json:"diggCount"`
 	// 下载数
-	DownloadCount float64 `json:"downloadCount"`
+	DownloadCount int64 `json:"downloadCount"`
 	// 播放数，只有作者本人可见。公开视频设为私密后，播放数也会返回0
-	PlayCount float64 `json:"playCount"`
+	PlayCount int64 `json:"playCount"`
 	// 分享数
-	ShareCount float64 `json:"shareCount"`
+	ShareCount int64 `json:"shareCount"`
 	// 转发数
-	ForwardCount float64 `json:"forwardCount"`
+	ForwardCount int64 `json:"forwardCount"`
 	// 评论数
-	CommentCount float64 `json:"CommentCount"`
+	CommentCount int64 `json:"commentCount"`
 }
